chore: just reorganizing some packages

--- a/packages/macos/Brewfile
+++ b/packages/macos/Brewfile
@@ -1,23 +1,12 @@
 cask "1password-cli"
 cask "wezterm"
 
-brew "antidote"
-brew "duckdb"
-brew "elixir"
-brew "erlang"
 brew "exercism"
+brew "fd"
 brew "flyctl"
 brew "go"
-brew "influxdb"
-brew "influxdb-cli"
-brew "mutagen"
-brew "node"
-brew "nvm"
-brew "openssl@1.1"
-brew "openssl@3"
-brew "postgresql@14"
+brew "openssl"
 brew "python@3.12"
-brew "sqlite"
 brew "tldr"
 brew "tmux"
-brew "yarn"
+brew "wget"
