feat: add tmux powerline and theme
I blatantly stole the theme from stephenprater/dotfiles.

--- a/packages/tmux/config/tmux.conf
+++ b/packages/tmux/config/tmux.conf
@@ -1,55 +1,64 @@
-# Force vi mode keys if $EDITOR is not explicity 'vi'
 setw -g mode-keys vi
-
-set -g default-terminal "screen-256color"
-set -sa terminal-overrides ',*256*:Tc'
-
-unbind C-b
-set -g prefix C-z
-
-unbind C-b
-set -g prefix C-z
-bind C-z send-prefix
-
-bind z send-keys C-z
-bind C-z last-window
-
-bind | split-window -h -p 35
-
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-bind ` select-window -t 0
-
-# Search for previous error
-bind-key e copy-mode \; send-keys "?Error" C-m
-
 set -sg escape-time 0
-
-# scrollback buffer size increase
 set -g history-limit 100000
 
-# Use up and down arrows for temporary "maximize"
-unbind Up; bind Up resize-pane -Z; unbind Down; bind Down resize-pane -Z
+# Reset leader to Ctrl-z
+unbind C-b
+set -g prefix C-z
+bind-key z send-keys C-z
+bind-key C-z last-window
+
+# Config reloading
+bind-key r source-file $XDG_CONFIG_HOME/tmux/tmux.conf
+
+# Controlling panes
+bind-key | split-window -h -p 35
+bind-key _ split-window -v
+bind-key K kill-pane
+bind-key / next-layout
+bind-key \\ rotate-window
+
+# Navigating panes
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+bind-key ` select-window -t 0
+
+# Use up/down arrows for temporary "maximize"
+unbind Up; bind Up resize-pane -Z
+unbind Down; bind Down resize-pane -Z
+
+set -g focus-events on
+set -g default-terminal 'tmux-256color'
+set -ag terminal-overrides ",*256col*:Tc"
+
+set -g message-style "bg=#1f1f28 fg=#dcd7ba"
+set -g status-style "bg=#1f1f28"
+set -g pane-border-style "fg=#2a2a37"
+set -g pane-active-border-style "fg=#6a9589"
+set -g renumber-windows on
+
+# List of tpm plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'erikw/tmux-powerline'
+
+# Initialize tpm plugin manager (keep at bottom)
+run '~/.config/tmux/plugins/tpm/tpm'
+
+# --- Legacy - maybe remove ---
 
 # Copy/paste interop
-bind C-c run "tmux show-buffer | reattach-to-user-namespace pbcopy"
-bind C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+# bind-key C-c run "tmux show-buffer | reattach-to-user-namespace pbcopy"
+# bind-key C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
-bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi V send-keys -X rectangle-toggle
+# bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+# bind-key -T copy-mode-vi v send-keys -X begin-selection
+# bind-key -T copy-mode-vi V send-keys -X rectangle-toggle
 
-# Mouse options for tmux >= 2.5
-set-option -g -q mouse on
-bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
-bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
-bind-key -T copy-mode-vi WheelUpPane send-keys -X halfpage-up
-bind-key -T copy-mode-vi WheelDownPane send-keys -X halfpage-down
-
-# Better project name in status bar
-set -g status-left-length 18
-set -g status-left '#[fg=colour235,bg=colour76,bold] #S '
-
-if-shell '[[ -e ~/.tmux.conf.local ]]' 'source-file ~/.tmux.conf.local'
+# # Mouse options for tmux >= 2.5
+# set-option -g -q mouse on
+# bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
+# bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
+# bind-key -T copy-mode-vi WheelUpPane send-keys -X halfpage-up
+# bind-key -T copy-mode-vi WheelDownPane send-keys -X halfpage-down
